// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> accepts implicit and explicit items 1`] = `
<Select
  className=""
  items={
    Array [
      "a",
      "b",
      Object {
        "value": "c",
      },
      "d",
      Object {
        "label": "E",
        "value": "e",
      },
      "f",
    ]
  }
  onChange={[Function]}
  placeholder="Select ..."
  value={null}
>
  <div
    className="css-7c9av6 "
  >
    <div
      className={undefined}
      onTouchStart={[Function]}
    >
      <span
        className="undefined "
      >
        Select ...
      </span>
      <span
        className="css-jf1dde"
      >
        ▾
      </span>
    </div>
  </div>
</Select>
`;

exports[`<Select /> renders with implicit items (closed) 1`] = `
<Select
  className=""
  items={
    Array [
      "a",
      "b",
      "c",
      "d",
      "e",
      "f",
    ]
  }
  onChange={[Function]}
  placeholder="Select ..."
  value={null}
>
  <div
    className="css-7c9av6 "
  >
    <div
      className={undefined}
      onTouchStart={[Function]}
    >
      <span
        className="undefined "
      >
        Select ...
      </span>
      <span
        className="css-jf1dde"
      >
        ▾
      </span>
    </div>
  </div>
</Select>
`;

exports[`<Select /> renders with implicit items (opened) 1`] = `
<Select
  className=""
  items={
    Array [
      "a",
      "b",
      "c",
      "d",
      "e",
      "f",
    ]
  }
  onChange={[Function]}
  placeholder="Select ..."
  value={null}
>
  <div
    className="css-7c9av6 "
  >
    <div
      className={undefined}
      onTouchStart={[Function]}
    >
      <span
        className="undefined "
      >
        Select ...
      </span>
      <span
        className="css-jf1dde"
      >
        ▾
      </span>
    </div>
  </div>
</Select>
`;

exports[`<Select /> renders without items 1`] = `
<Select
  className=""
  items={Array []}
  onChange={[Function]}
  placeholder="Select ..."
  value={null}
>
  <div
    className="css-7c9av6 "
  >
    <div
      className={undefined}
      onTouchStart={[Function]}
    >
      <span
        className="undefined "
      >
        Select ...
      </span>
      <span
        className="css-jf1dde"
      >
        ▾
      </span>
    </div>
  </div>
</Select>
`;

exports[`<Select /> triggers callback on change 1`] = `
<Select
  className=""
  items={
    Array [
      "a",
      "b",
      "c",
      "d",
      "e",
      "f",
    ]
  }
  onChange={[Function]}
  placeholder="Select ..."
  value={null}
>
  <div
    className="css-7c9av6 "
  >
    <div
      className={undefined}
      onTouchStart={[Function]}
    >
      <span
        className="undefined "
      >
        Select ...
      </span>
      <span
        className="css-jf1dde"
      >
        ▾
      </span>
    </div>
  </div>
</Select>
`;
